# RAG

./: Readme.md  custom_rag.py  ingestion.py  main.py  mediumblog1.txt  pyproject.toml
faiss_index_react/: index.faiss  index.pkl
vectorstore/: main.py
